public/assets/css/main.css
@import url("font-awesome.min.css");

@font-face {
  font-family: 'Lato Regular';
  src: url('../fonts/Lato-Regular.eot');

  src: url('../fonts/Lato-Regular.eot?#iefix') format('embedded-opentype'), 
       url('../fonts/Lato-Regular.woff2') format('woff2'), 
       url('../fonts/Lato-Regular.woff') format('woff'), 
       url('../fonts/Lato-Regular.ttf')  format('truetype');
}

/*
 Miniport by HTML5 UP
  html5up.net | @ajlkn
  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */

/*
 Reset
 */

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  -webkit-text-size-adjust: none;
}

/*
 Box Model
 */

*,
*:before,
*:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/*
 Containers
 */

.container {
  margin-left: auto;
  margin-right: auto;
}

.container.\31 25\25 {
  width: 100%;
  max-width: 1200px;
  min-width: 960px;
}

.container.\37 5\25 {
  width: 720px;
}

.container.\35 0\25 {
  width: 480px;
}

.container.\32 5\25 {
  width: 240px;
}

.container {
  width: 960px;
}

@media screen 
  and (min-width: 1200px) 
  and (-webkit-max-device-pixel-ratio: 1.25) {
  .container.\37 5\25 {
    width: 900px;
  }

  .container.\35 0\25 {
    width: 600px;
  }

  .container.\32 5\25 {
    width: 300px;
  }

  .container {
    width: 1200px;
  }
}

@media screen 
  and (min-width: 1500px)
  and (-webkit-min-device-pixel-ratio: 1.26) 
  and (-webkit-max-device-pixel-ratio: 1.5) {
  .container.\37 5\25 {
    width: 1125px;
  }

  .container.\35 0\25 {
    width: 750px;
  }

  .container.\32 5\25 {
    width: 375px;
  }

  .container {
    width: 1500px;
  }
}

@media screen 
  and (min-width: 1800px)
  and (-webkit-min-device-pixel-ratio: 1.51) 
  and (-webkit-max-device-pixel-ratio: 2) {
  .container.\37 5\25 {
    width: 1350px;
  }

  .container.\35 0\25 {
    width: 900px;
  }

  .container.\32 5\25 {
    width: 450px;
  }

  .container {
    width: 1800px;
  }
}

@media screen 
  and (min-width: 2400px)
  and (-webkit-min-device-pixel-ratio: 2.01) 
  and (-webkit-max-device-pixel-ratio: 2.5) {
  .container.\37 5\25 {
    width: 1800px;
  }

  .container.\35 0\25 {
    width: 1200px;
  }

  .container.\32 5\25 {
    width: 600px;
  }

  .container {
    width: 2400px;
  }
}

@media screen 
  and (min-width: 3000px)
  and (-webkit-min-device-pixel-ratio: 2.51) 
  and (-webkit-max-device-pixel-ratio: 3) {
  .container.\37 5\25 {
    width: 2250px;
  }

  .container.\35 0\25 {
    width: 1500px;
  }

  .container.\32 5\25 {
    width: 750px;
  }

  .container {
    width: 3000px;
  }
}

@media screen 
  and (min-width: 3600px)
  and (-webkit-min-device-pixel-ratio: 3.01) 
  and (-webkit-max-device-pixel-ratio: 3.5) {
  .container.\37 5\25 {
    width: 2700px;
  }

  .container.\35 0\25 {
    width: 1800px;
  }

  .container.\32 5\25 {
    width: 900px;
  }

  .container {
    width: 3600px;
  }
}

@media screen 
  and (min-width: 4200px)
  and (-webkit-min-device-pixel-ratio: 3.51) 
  and (-webkit-max-device-pixel-ratio: 4) {
  .container.\37 5\25 {
    width: 3150px;
  }

  .container.\35 0\25 {
    width: 2100px;
  }

  .container.\32 5\25 {
    width: 1050px;
  }

  .container {
    width: 4200px;
  }
}

@media screen 
  and (min-width: 4800px)
  and (-webkit-min-device-pixel-ratio: 4.01) {
  .container.\37 5\25 {
    width: 3600px;
  }

  .container.\35 0\25 {
    width: 2400px;
  }

  .container.\32 5\25 {
    width: 1200px;
  }

  .container {
    width: 4800px;
  }
}

@media screen 
  and (min-width: 960px) 
  and (max-width: 1200px) 
  and (-webkit-max-device-pixel-ratio: 1.25) {
  .container.\37 5\25 {
    width: 720px;
  }

  .container.\35 0\25 {
    width: 480px;
  }

  .container.\32 5\25 {
    width: 240px;
  }

  .container {
    width: 960px;
  }
}

@media screen 
  and (min-width: 1280px) 
  and (max-width: 1500px) 
  and (-webkit-min-device-pixel-ratio: 1.26) 
  and (-webkit-max-device-pixel-ratio: 1.5) {
  .container.\37 5\25 {
    width: 900px;
  }

  .container.\35 0\25 {
    width: 600px;
  }

  .container.\32 5\25 {
    width: 300px;
  }

  .container {
    width: 1200px;
  }
}

@media screen 
  and (min-width: 1440px) 
  and (max-width: 1800px) 
  and (-webkit-min-device-pixel-ratio: 1.51) 
  and (-webkit-max-device-pixel-ratio: 2) {
  .container.\37 5\25 {
    width: 1080px;
  }

  .container.\35 0\25 {
    width: 720px;
  }

  .container.\32 5\25 {
    width: 360px;
  }

  .container {
    width: 1440px;
  }
}

@media screen 
  and (min-width: 1920px) 
  and (max-width: 2400px) 
  and (-webkit-min-device-pixel-ratio: 2.01) 
  and (-webkit-max-device-pixel-ratio: 2.5) {
  .container.\37 5\25 {
    width: 1440px;
  }

  .container.\35 0\25 {
    width: 960px;
  }

  .container.\32 5\25 {
    width: 480px;
  }

  .container {
    width: 1920px;
  }
}
/* ... */

